tests/reference/asr-test_annassign_01-2f18669.stderr
semantic error: Unsupported type annotation: Optional
 --> tests/errors/test_annassign_01.py:2:8
  |
2 |     a: Optional[i32] = 5
  |        ^^^^^^^^^^^^^ 
